# GXcamera

./: CMakeLists.txt  readme.md
include/: Gxcamera.h
src/: Gxcamera.cpp
test/: test_gxcamera.cpp
